# zidle

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
zidle/: __init__.py  __main__.py  cli.py  utils.py
zidle/core/: __init__.py  idle_scan.py  ipid_profile.py  packets.py
zidle/models/: __init__.py  scan_result.py  zombie.py
zidle/output/: __init__.py  formatter.py
