[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zidle"
version = "0.1.0"
description = "Zombie Idle Scan - Stealth port scanning using hosts with predictable IP ID"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Zidle Contributors"}]
keywords = ["security", "pentest", "idle-scan", "zombie-scan", "nmap"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]

dependencies = [
    "scapy>=2.5.0",
    "typer[all]>=0.9.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.scripts]
zidle = "zidle.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["zidle*"]
